[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/UI/UnlockButtons/Unlock_Buttons.png" type="Texture" id=1]
[ext_resource path="res://SkinFrames/bag_brown.tres" type="SpriteFrames" id=2]
[ext_resource path="res://Sprites/UI/TopUI/CoinScore.png" type="Texture" id=3]
[ext_resource path="res://Fonts/pixel-font_skin_price.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scripts/UI Scripts/Bag Collection/skin_item.gd" type="Script" id=5]
[ext_resource path="res://Audio/pop_skinPurchased_shorter.wav" type="AudioStream" id=6]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 68, 100 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 68, 0, 68, 100 )

[sub_resource type="Curve" id=3]
_data = [ Vector2( 0, 0.990909 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.0090909 ), -4.78322, 0.0, 0, 0 ]

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0, 0.501484, 1 )
colors = PoolColorArray( 0, 0.132813, 1, 1, 0.898438, 0, 1, 1, 0.945313, 1, 0, 1 )

[node name="skin_item" type="Control"]
margin_right = 68.0
margin_bottom = 100.0
rect_min_size = Vector2( 68, 140 )
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_right = 68.0
margin_bottom = 100.0
toggle_mode = true
texture_normal = SubResource( 1 )
texture_pressed = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CPUParticles2D" type="CPUParticles2D" parent="TextureButton"]
position = Vector2( 34.4325, 53.5028 )
emitting = false
amount = 100
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 2
emission_rect_extents = Vector2( 10, 20 )
direction = Vector2( 0, 0 )
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 100.0
scale_amount = 4.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 3 )
color_ramp = SubResource( 4 )
hue_variation = 0.97

[node name="skin_back" type="AnimatedSprite" parent="TextureButton"]
position = Vector2( 34.4611, 56.6332 )
scale = Vector2( 0.6, 0.6 )
frames = ExtResource( 2 )
animation = "back"

[node name="skin_front" type="AnimatedSprite" parent="TextureButton"]
position = Vector2( 34.4611, 56.6332 )
scale = Vector2( 0.6, 0.6 )
frames = ExtResource( 2 )
animation = "idle"

[node name="price" type="Label" parent="TextureButton"]
margin_left = 14.1997
margin_top = 105.37
margin_right = 54.1997
margin_bottom = 122.37
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 4 )
text = "100"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="coin" type="Sprite" parent="TextureButton"]
position = Vector2( 5, 110.37 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
bus = "SFX"
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
